# docker-reload-sidecar

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
tests/: test.sh
